<resources>
    <string name="app_name">SantanderDevWeek</string>
    <string name="txt_ola">Olá,</string>
    <string name="txt_saldo_disponivel">Saldo disponível</string>
    <string name="txt_saldo_limite">Saldo + limite:</string>
    <string name="txt_ver_extrato">Ver extrato</string>
    <string name="txt_pagar">Pagar</string>
    <string name="txt_recarregar">Recarregar</string>
    <string name="txt_transferir">Transferir</string>
    <string name="txt_cartao_final">Cartão final</string>
    <string name="txt_cartoes">Cartões</string>
    <string name="txt_ofertas">Conheça o Shopping Santander: as melhores ofertas e benefícios. Clique aqui!</string>
</resources>