<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <ImageView
        android:id="@+id/iv_main_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/redPrimary"
        app:layout_constraintDimensionRatio="16:4.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_toolbar" />

    <TextView
        android:id="@+id/tv_ola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ola"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tb_toolbar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Filipe"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginLeft="6dp"
        app:layout_constraintTop_toTopOf="@id/tv_ola"
        app:layout_constraintStart_toEndOf="@id/tv_ola"
        app:layout_constraintBottom_toBottomOf="@id/tv_ola"/>

    <TextView
        android:id="@+id/tv_agencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ag 2441"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_ola"
        app:layout_constraintStart_toStartOf="@id/tv_ola" />

    <TextView
        android:id="@+id/tv_conta_corrente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cc 245786-5"
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/tv_agencia"
        app:layout_constraintStart_toEndOf="@id/tv_agencia" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_main_card"
        android:layout_width="0dp"
        android:layout_height="195dp"
        android:layout_margin="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tv_agencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_update_white_24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_saldo_diponivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/txt_saldo_disponivel"
                android:textSize="18sp"
                app:layout_constraintLeft_toRightOf="@id/iv_update"
                app:layout_constraintTop_toTopOf="@id/iv_update"
                app:layout_constraintBottom_toBottomOf="@id/iv_update" />

            <ImageView
                android:id="@+id/iv_less"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_expand_less_white_24dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 1.346,67"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/iv_update"
                app:layout_constraintStart_toStartOf="@id/iv_update"/>

            <TextView
                android:id="@+id/tv_saldo_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_saldo_limite"
                android:layout_marginTop="6dp"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo"
                app:layout_constraintStart_toStartOf="@id/tv_saldo"/>

            <TextView
                android:id="@+id/tv_saldo_limite_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 2.346,67"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toTopOf="@id/tv_saldo_limite"
                app:layout_constraintStart_toEndOf="@id/tv_saldo_limite"
                app:layout_constraintBottom_toBottomOf="@id/tv_saldo_limite"/>

            <View
                android:id="@+id/v_line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo_limite" />

            <TextView
                android:id="@+id/tv_ver_extrato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_ver_extrato"
                android:textColor="@color/redSecondary"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/v_line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_pagar"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/mcv_main_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/mcv_tranferir" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/iv_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_credit_card_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tv_pagar"/>

            <TextView
                android:id="@+id/tv_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_pagar"
                app:layout_constraintTop_toBottomOf="@id/iv_pagar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_tranferir"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/mcv_main_card"
        app:layout_constraintStart_toEndOf="@id/mcv_pagar"
        app:layout_constraintEnd_toStartOf="@id/mcv_recarregar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/iv_tranferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_payments_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tv_tranferir"/>

            <TextView
                android:id="@+id/tv_tranferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_transferir"
                app:layout_constraintTop_toBottomOf="@id/iv_tranferir"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_recarregar"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/mcv_main_card"
        app:layout_constraintStart_toEndOf="@id/mcv_tranferir"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/iv_recarregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_credit_card_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tv_recarregar"/>

            <TextView
                android:id="@+id/tv_recarregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_recarregar"
                app:layout_constraintTop_toBottomOf="@id/iv_recarregar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_promo"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/mcv_tranferir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_promocao"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:src="@drawable/ic_method_draw_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_ofertas"
                android:layout_width="270dp"
                android:layout_height="65dp"
                android:text="@string/txt_ofertas"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_promocao"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_cartao_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cartoes"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/mcv_promo"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/iv_cartao_final"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:background="@color/redPrimary"
        app:layout_constraintTop_toBottomOf="@id/tv_cartao_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_cartao_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cartao_final"
        android:textColor="@color/white"
        android:layout_marginLeft="16dp"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/iv_cartao_final"
        app:layout_constraintLeft_toLeftOf="@id/iv_cartao_final"
        app:layout_constraintBottom_toBottomOf="@id/iv_cartao_final" />

    <TextView
        android:id="@+id/tv_cartao_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="7011"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@id/iv_cartao_final"
        app:layout_constraintStart_toEndOf="@id/tv_cartao_final"
        app:layout_constraintBottom_toBottomOf="@id/iv_cartao_final" />

    <ImageView
        android:id="@+id/iv_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_expand_more_white_24dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toTopOf="@id/iv_cartao_final"
        app:layout_constraintEnd_toEndOf="@id/iv_cartao_final"
        app:layout_constraintBottom_toBottomOf="@id/iv_cartao_final" />

</androidx.constraintlayout.widget.ConstraintLayout>